# docsoc-tools

./: .gitignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  nx.json  package-lock.json  package.json  project.json  tsconfig.base.json  typedoc.json
.github/workflows/: ci.yml  collection.yml
.metals/: metals.lock.db
clickup/calendar-sync/: .env.template  Cargo.toml  Dockerfile  README.md  docker-compose.yml  project.json
clickup/calendar-sync/migrations/2024-07-13-164359_create_mapping/: up.sql
clickup/calendar-sync/src/: db.rs  docsoc_ical.rs  main.rs  models.rs
collection/: .env.local.template  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  README.md  auth.ts  dev.docker-compose.yml  entry.sh  instrumentation.ts  jest.config.ts  next.config.js  project.json  tsconfig.json  typedoc.json
collection-e2e/: playwright.config.ts  project.json
collection/app/: ClientWrapper.tsx  layout.tsx  page.tsx
collection/components/: ConfirmModal.tsx  DoCSocBanner.tsx  ProductSelectionCard.tsx  UserInfo.tsx
collection/emails/: .env.template  .gitignore  getDucks.ts  getUncollectedPeople.ts  import.ts  mergeJay.ts  pride.ts  run-duck.sh  run-reminder.sh
collection/hooks/: useEnv.ts
collection/lib/: config.ts  constants.ts  fetcher.ts  types.ts  util.ts
collection/prisma/: schema.prisma
collection/scripts/: compose-entry.sh
firebase/: .env.template  .gitignore  demographicsICHack24.js  package.json
template/: .env.template  index.d.ts  instrumentation-node.ts  middleware.ts  next.config.js  postcss.config.mjs  project.json  tsconfig.json
(+268 files in other folders)
