
[package]
name = 'clickup-ical-sync'
description = 'Sync iCal calendar to ClickUp tasks. One-way sync from iCal to ClickUp.'
license = 'MIT'
version = '1.5.0'
edition = '2021'
homepage = 'https://github.com/icdocsoc/docsoc-tools/tree/main/clickup/calendar-sync'
repository = 'https://github.com/icdocsoc/docsoc-tools/tree/main/clickup/calendar-sync'
readme = 'README.md'

[dependencies]
env_logger = '0.11.3'
log = '0.4.22'
reqwest = { version = '0.12.5', features = ['blocking', 'json'] }
diesel = { version = '2.2.0', features = ['postgres'] }
dotenvy = '0.15'
ical = '0.11.0'
chrono = '0.4.38'
serde = { version = '1.0', features = ['derive'] }
governor = '0.6.3'
nonzero_ext = '0.3.0'
futures = '0.3.30'
diesel_migrations = '2.2.0'
